argocd/argo-application-webapp-rollout-blue-green.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-green
spec:
  selector:
    app: webapp
  ports:
  - name: webapp
    port: 80
    targetPort: webapp
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-blue
spec:
  selector:
    app: webapp
  ports:
  - name: webapp
    port: 80
    targetPort: webapp
    protocol: TCP

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: webapp
spec:
  strategy:
    blueGreen:
      activeService: webapp-green
      previewService: webapp-blue
      autoPromotionEnabled: false
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: docker.io/steveszabo/webapp:377936d
        ports:
        - name: webapp
          containerPort: 8080
          protocol: TCP
