argocd/argo-application-webapp-rollout-istio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-canary
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-stable
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
