argocd/argo-application-webapp-rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: webapp
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: docker.io/steveszabo/webapp:377936d
        ports:
        - name: webapp
          containerPort: 8080
          protocol: TCP
  strategy:
    blueGreen: 
      activeService: webapp-active
      previewService: webapp-preview
      autoPromotionEnabled: false

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-active
spec:
  selector:
    app: webapp
  ports:
  - name: webapp
    port: 80
    targetPort: webapp
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-preview
spec:
  selector:
    app: webapp
  ports:
  - name: webapp
    port: 80
    targetPort: webapp
    protocol: TCP
